fix: 카메라 없이도 OSD 스트리밍 가능하도록 수정
- 카메라 초기화 실패 시 프로그램 종료하지 않고 계속 진행
- OSD만으로 스트리밍 가능 (검은 화면 + 상태 정보)
- QGC 커스텀 플러그인 추가 (소화, 편대, 목표점 패널)
- FC 파라미터 백업 파일 추가
- 소화 시나리오 및 QGC 개발 가이드 문서 추가

백업용 커밋 (작업 중)

--- a/streaming/src/CMakeLists.txt
+++ b/streaming/src/CMakeLists.txt
@@ -85,3 +85,42 @@ target_compile_options(streaming_lib PRIVATE
     ${GSTREAMER_CFLAGS_OTHER}
 )
 
+
+# OSD 디렉토리
+set(OSD_DIR "${PROJECT_ROOT}/osd/src")
+include_directories(${OSD_DIR})
+
+# ROS2 (StatusOverlay가 ROS2 사용)
+if(DEFINED ENV{ROS_DISTRO})
+    find_package(ament_cmake QUIET)
+    if(ament_cmake_FOUND)
+        find_package(rclcpp REQUIRED)
+        find_package(std_msgs REQUIRED)
+        find_package(px4_msgs REQUIRED)
+        include_directories(${rclcpp_INCLUDE_DIRS})
+    endif()
+endif()
+
+# OSD 소스 파일들
+set(OSD_SOURCES
+    ${OSD_DIR}/status/status_overlay.cpp
+    ${OSD_DIR}/lidar/distance_overlay.cpp
+    ${PROJECT_ROOT}/thermal/src/utils.cpp
+)
+
+# test_osd_stream 실행 파일
+add_executable(test_osd_stream
+    test_osd_stream.cpp
+    ${OSD_SOURCES}
+)
+
+target_link_libraries(test_osd_stream
+    streaming_lib
+    ${OpenCV_LIBS}
+    pthread
+)
+
+# ROS2 링크 (StatusOverlay가 ROS2 구독자 포함)
+if(ament_cmake_FOUND)
+    ament_target_dependencies(test_osd_stream rclcpp std_msgs px4_msgs)
+endif()
